--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,9 @@ dependencies:
   cupertino_icons: ^1.0.8
 
   flame: ^1.34.0
-  flame_audio: ^2.10.0
+  firebase_core: ^4.4.0
+  firebase_auth: ^6.1.4
+  cloud_firestore: ^6.1.2
 
 dev_dependencies:
   flutter_test:
